

python_sources = [
'__init__.py',
'test_ader2.py',
'test_boundaries.py',
'test_boundaries_sw.py',
'test_extrapolation_sw.py',
'test_flow_algorithms.py',
'test_flux.py',
'test_physics_sw.py',
'test_regression_snapshots.py',
'test_data_manager.py',
'test_sw_domain_openmp.py',
'test_DE_gpu_omp.py',
'test_forcing.py',
'test_friction.py',
'test_loadsave.py',
'test_most2nc.py',
'test_shallow_water_domain.py',
'test_sww_interrogate.py',
'test_system.py',
'test_timezone.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/shallow_water/tests'
)

subdir('data')
subdir('test_regression_snapshots')
subdir('urs_test_data')
