baseline_sources = [
'test_dam_break_DE0_stage_snapshot.csv',
'test_dam_break_DE1_stage_snapshot.csv',
'test_dam_break_with_friction_snapshot.csv',
'test_thacker_planar_surface_snapshot.csv',
'test_extrapolation_edge_values_snapshot.csv',
'test_timestep_sequence_snapshot.csv',
]

py3.install_sources(
  baseline_sources,
  subdir: 'anuga/shallow_water/tests/test_regression_snapshots'
)
